# gmon

./: Cargo.toml  readme.md
graphql/: jobs.graphql  pipelines.graphql
src/: config.rs  events.rs  gitlab_ref.rs  main.rs  theme.rs
src/cmds/: mod.rs  pipeline.rs  pipelines.rs
src/fetchers/: jobs.rs  mod.rs  pipelines.rs
